refactor: rename 'Guardados' heading to 'Notas guardadas'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               
               <aside class="sidebar">
                 <div class="sidebar-header">
-                  <h2>Guardados</h2>
+                  <h2>Notas guardadas</h2>
                 </div>
                 <div id="savedList" class="saved-list">
                   <!-- Saved items will be injected here -->
