--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                 <main class="calculator-grid">
                   <div class="input-section">
                     <div class="input-group">
+                      <label for="calculationName">Nombre del Cálculo</label>
+                      <input type="text" id="calculationName" placeholder="Mi cálculo" />
+                    </div>
+
+                    <div class="input-group">
                       <label for="buyPrice">Precio de Compra (€)</label>
                       <input type="number" id="buyPrice" placeholder="0.00" step="0.01" min="0" />
                     </div>
