feat: Make calculation name input span full width by adding `full-width` class and corresponding CSS.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <main class="calculator-grid">
                   <div class="input-section">
-                    <div class="input-group">
+                    <div class="input-group full-width">
                       <label for="calculationName">Nombre del Cálculo</label>
                       <input type="text" id="calculationName" placeholder="Mi cálculo" />
                     </div>
