--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
             </span>
             <span class="label">Notas</span>
           </li>
-          <!-- Future sections can be added here -->
+          <li class="nav-item" data-target="operations-section">
+            <span class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
+            </span>
+            <span class="label">Operaciones</span>
+          </li>
         </ul>
       </nav>
 
@@ -108,6 +113,14 @@
                   </div>
                 </main>
               </div>
+            </div>
+          </section>
+
+          <section id="operations-section" class="section">
+            <div class="container">
+              <header>
+                <h1>Registrar operación</h1>
+              </header>
             </div>
           </section>
         </div>
